kotlin-parser/src/test/semlang/validatorTests/fail/inlineFunction1.sem

function shadowedVariable(i: Integer): Integer {
  let myFunction = function(a: Integer) {
    let i = Integer.times(a, a)
    Integer.plus(i, Integer."1")
  }
  myFunction(i)
}